--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -153,6 +153,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
+                        <div onclick="location.href ='./sub3.html'">
                         <h2 data-swiper-parallax="-400">CGV아트하우스상</h2>
                         <div class="title" data-swiper-parallax="-300">&lt;절해고도&gt;</div>
                         <div class="subtitle" data-swiper-parallax="-200">김미영 | 대한민국</div>
@@ -163,6 +164,7 @@
                                 작품들이었습니다. 외 작품 비전 부문 모든 감독님들의 다음 작품을 응원하고 기대하겠습니다.
                             </p>
                         </div>
+                    </div>
                     </div>
                     <div class="swiper-slide">
                         <h2 data-swiper-parallax="-400">부산시네필상</h2>
