--- a/Pj_BIFF/sub3.html
+++ b/Pj_BIFF/sub3.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>부산국제영화제</title>
-    <link rel="shortcut icon" href="./img/Biff_logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/jzlg.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="./css/sub3.css">
     <link rel="stylesheet" href="./css/submedia.css">
 
@@ -77,14 +77,14 @@
         <header class="top ibx">
             <div class="logo">
                 <a href="./index.html">
-                    <img class="log" src="./img/logo1.png" alt="BIFF로고">
+                    <img class="log" src="./img/jzlg.jpeg" alt="BIFF로고">
                 </a>
             </div>
 
             <div class="gnb2">
                 <div>
                     <ul class="lb">
-                        <li class="on"><a href="#pg1">Music</a></li>
+                        <li class="on"><a href="#pg1">Music Room</a></li>
                     </ul>
 
                 </div>
@@ -195,7 +195,7 @@
                                         <span class="film_tit_kor">초록밤</span>
                                         <span class="film_tit_eng en">Chorokbam</span>
                                     </div>
-                                    "(무대인사 중계)"
+                                    (무대인사 중계)
                                 </div>
                                 <div class="grade">
                                     <span class="ico_grade ico_15" title="15세 이상 관람가"></span>
@@ -229,7 +229,7 @@
                                         <span class="film_tit_kor">초록밤</span>
                                         <span class="film_tit_eng en">Chorokbam</span>
                                     </div>
-                                    "(백신패스관)"
+                                    (백신패스관)
                                 </div>
                                 <div class="grade">
                                     <span class="ico_grade ico_15" title="15세 이상 관람가"></span>
