--- a/Pj_BIFF/sub3.html
+++ b/Pj_BIFF/sub3.html
@@ -22,7 +22,7 @@
     <!-- ******************************************* 상단 ******************************************* -->
     <div id="top">
         <div class="ham">
-            <button class="menu" onclick="sMenu()">≡</button>
+            <button class="menu" onclick="sMenu()">=</button>
         </div>
         <nav class="gnb1">
             <button class="cbtn" onclick="sMenu()">×</button>
