--- a/Pj_BIFF/sub3.html
+++ b/Pj_BIFF/sub3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>부산국제영화제</title>
+    <title>My Jazz Bar</title>
     <link rel="shortcut icon" href="./img/jzlg.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="./css/sub3.css">
     <link rel="stylesheet" href="./css/submedia.css">
