--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -167,6 +167,7 @@
                     </div>
                     </div>
                     <div class="swiper-slide">
+                        <div onclick="location.href ='./sub4.html'">
                         <h2 data-swiper-parallax="-400">부산시네필상</h2>
                         <div class="title" data-swiper-parallax="-300">&lt;아임 쏘 쏘리&gt;</div>
                         <div class="subtitle" data-swiper-parallax="-200">자오량 | 대한민국</div>
@@ -175,6 +176,7 @@
                                 이 영화는 객관적인 시선을 유지하면서도 우리가 피할 수도 없고 피해서도 안 되는 중요한 문제를 논리적으로 관객에게 다가갑니다. 또한 치밀하게 설계된 서늘한
                                 사운드와 메타포로 주제를 효과적으로 전달했기에 이 작품을 수상작으로 선택하였습니다.
                             </p>
+                        </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
