--- a/Pj_BIFF/sub4.html
+++ b/Pj_BIFF/sub4.html
@@ -116,7 +116,7 @@
                 <div onclick="location.href ='./index.html'">
                     <a class="back">⥪Back</a>
                 </div>
-                <ul class="Mtxt">
+                <!-- <ul class="Mtxt">
                     <li>Jazz Room</li>
                     <li>Time for Jazz <br>
                         BEST OF BILL EVANS</li>
@@ -142,7 +142,7 @@
                             17.But Beautiful<br>
                             18.Twelve Tone Tune Two<br>
                             ----------------------------------------</li>
-                        </ul>
+                        </ul> -->
                     </div>
                     
                     <div class="play-button">
