--- a/Pj_BIFF/sub4.html
+++ b/Pj_BIFF/sub4.html
@@ -170,13 +170,13 @@
         <main class="cont ibx">
         <section id="pg3" class="cont3">
             <div class="characters">
-                <h2>바다가 들린다</h2>
+                <h2>바다가 들린다 | Ocean Waves</h2>
                 <div class="cbwrap">
                     <div class="box1">
                         <div class="imgtxtbx">
                             <div class="txtbx">
                                 <div class="img">
-                                    <img src="./img/sub4img/img1.jpeg" alt="포스터">
+                                    <img class="iimg" src="./img/sub4img/img1.jpeg" alt="포스터" style="display: inline">
                                 </div>
                                 <h3>
                                     바다가 들린다
@@ -193,7 +193,7 @@
                                 </p>
                             </div>
                             <div class="imgbx">
-                                <div class="mainposter"></div>
+                                <div class="mainposter" style="display: block;background-image: url(../images/sub4img/poster1.jpeg)"></div>
                             </div>
                         </div>
                     </div>
