--- a/Pj_BIFF/sub4.html
+++ b/Pj_BIFF/sub4.html
@@ -167,8 +167,8 @@
         <script src="./JS/submain.js"></script>
 
         <!-- /******************************************* cont3 *******************************************/ -->
-        <main class="cont ibx">
-        <section id="pg3" class="cont3">
+        <!-- <main class="cont ibx"> -->
+        <section id="pg2" class="cont2">
             <div class="characters">
                 <h2>바다가 들린다 | Ocean Waves</h2>
                 <div class="cbwrap">
@@ -193,7 +193,7 @@
                                 </p>
                             </div>
                             <div class="imgbx">
-                                <div class="mainposter" style="display: block;background-image: url(../images/sub4img/poster1.jpeg)"></div>
+                                <div class="mainposter"></div>
                             </div>
                         </div>
                     </div>
