--- a/Pj_BIFF/sub4.html
+++ b/Pj_BIFF/sub4.html
@@ -116,35 +116,7 @@
                 <div onclick="location.href ='./index.html'">
                     <a class="back">⥪Back</a>
                 </div>
-                <!-- <ul class="Mtxt">
-                    <li>Jazz Room</li>
-                    <li>Time for Jazz <br>
-                        BEST OF BILL EVANS</li>
-                        <li>BILL EVANS GREATEST HITS FULL ALBUM</li><br>
-                        <li>TrackList!<br>
-                            ----------------------------------------<br>
-                            1.My Foolish Heart<br>
-                            2.Israel<br>
-                            3.Detour Ahead<br>
-                            4.My Melancholy Baby<br>
-                            5.Emily<br>
-                            6.Alfie<br>
-                            7.Someday My Prince Will Come<br>
-                            8.If You Could See Me Now<br>
-                            9.Round Midnight<br>
-                            10.Someday My Prince Will Come<br>
-                            11.Sleepin' Bee<br>
-                            12.You're Gonna Hear From Me<br>
-                            13.Re: Person I Knew<br>
-                            14.Sareen Jurer<br>
-                            15.Blue Serge<br>
-                            16.Up With The Lark<br>
-                            17.But Beautiful<br>
-                            18.Twelve Tone Tune Two<br>
-                            ----------------------------------------</li>
-                        </ul> -->
                     </div>
-                    
                     <div class="play-button">
                         <svg class="play-circles" viewBox="0 0 152 152">
                             <circle class="play-circle-01" fill="none" stroke="#fff" stroke-width="3" stroke-dasharray="343"
@@ -193,6 +165,48 @@
 
                                     등장인물들이 모두 고등학생에서 성인으로 성장하는 이야기란 점만 해도 기존의 지브리 애니에서는 찾을 수 없는 요소인데, 여기에다 모치즈키 토모미는 자신의 특징대로 환상적인 면을 철저히 배제하고 현실적인 이야기만을 담는 한편, 이러한 작품의 현실성을 강조하기 위해 철저하게 고치에 가서 로케이션을 한 후 장면 구도 하나 하나도 전부 제작진이 실사로 구도를 잡아 촬영을 해보고 그걸 반영할 정도로 마치 정제된 실사 영화 같은 스타일을 추구했다.
 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box1">
+                        <div class="imgtxtbx">
+                            <div class="txtbx">
+                                <div class="img">
+                                    <img class="iimg" src="./img/sub4img/taku.jpeg" alt="포스터" style="display: inline">
+                                </div>
+                                <h3>
+                                    모리사키 타쿠
+                                    <span>杜崎 拓</span>
+                                </h3>
+                                <p>
+                                    이 이야기의 주인공. 고치의 명문 사립 고등학교 출신. 우등생이긴 하나 한편 교사에 대하여 자신의 의견을 주장하는 반골정신의 소유자.<br><br>
+                                    평범하지만 정의감 넘치는 소년, 리카코를 좋아하는 자신의 감정을 깨닫지 못하는 둔감한 구석이 있다.<br><br>
+                                    고교 졸업 후, 도쿄의 대학으로 진학한다. 본가는 고치 시의 고다이산(五台山).
+                                </p>
+                            </div>
+                            <div class="imgbx scdimg">
+                                <div class="mainposter"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box1">
+                        <div class="imgtxtbx">
+                            <div class="imgbx scdimg">
+                                <div class="mainposter"></div>
+                            </div>
+                            <div class="txtbx">
+                                <div class="img">
+                                    <img class="iimg" src="./img/sub4img/rikako.jpeg" alt="포스터" style="display: inline">
+                                </div>
+                                <h3>
+                                    모리사키 타쿠
+                                    <span>杜崎 拓</span>
+                                </h3>
+                                <p>
+                                    이 이야기의 주인공. 고치의 명문 사립 고등학교 출신. 우등생이긴 하나 한편 교사에 대하여 자신의 의견을 주장하는 반골정신의 소유자.<br><br>
+                                    평범하지만 정의감 넘치는 소년, 리카코를 좋아하는 자신의 감정을 깨닫지 못하는 둔감한 구석이 있다.<br><br>
+                                    고교 졸업 후, 도쿄의 대학으로 진학한다. 본가는 고치 시의 고다이산(五台山).
                                 </p>
                             </div>
                         </div>
