--- a/Pj_BIFF/sub4.html
+++ b/Pj_BIFF/sub4.html
@@ -16,6 +16,10 @@
     <script src="./JS/jquery-ui.min.js"></script>
     <script src="./JS/sub_jquery-autoScroll-1.0.js"></script>
 
+    <script>
+
+      </script>
+
 </head>
 
 <body>
@@ -104,9 +108,8 @@
     <!-- /******************************************* cont1 *******************************************/ -->
     <div id="cont">
         <section id="pg1" class="cont1">
-            <!-- partial:index.partial.html -->
             <video class="Mvideo" src="./img/ocean_waves.mp4" autoplay muted loop></video>
-            <audio controls autoplay loop>
+            <audio autoplay controls loop onloadstart="this.volume=0.3">
             <source src="./img/ocean_waves.mp3" type="audio/mpeg">
                Your browser does not support the audio element.
                이 브라우저에서는 오디오가 지원되지 않습니다.
@@ -192,7 +195,7 @@
                     </div>
                     <div class="box1">
                         <div class="imgtxtbx">
-                            <div class="imgbx scdimg">
+                            <div class="imgbx trdimg">
                                 <div class="mainposter"></div>
                             </div>
                             <div class="txtbx">
@@ -200,13 +203,57 @@
                                     <img class="iimg" src="./img/sub4img/rikako.jpeg" alt="포스터" style="display: inline">
                                 </div>
                                 <h3>
-                                    모리사키 타쿠
-                                    <span>杜崎 拓</span>
+                                    무토 리카코
+                                    <span>武藤 里伽子</span>
                                 </h3>
                                 <p>
-                                    이 이야기의 주인공. 고치의 명문 사립 고등학교 출신. 우등생이긴 하나 한편 교사에 대하여 자신의 의견을 주장하는 반골정신의 소유자.<br><br>
-                                    평범하지만 정의감 넘치는 소년, 리카코를 좋아하는 자신의 감정을 깨닫지 못하는 둔감한 구석이 있다.<br><br>
-                                    고교 졸업 후, 도쿄의 대학으로 진학한다. 본가는 고치 시의 고다이산(五台山).
+                                    부모의 이혼으로 전학하게 된 소녀, 어머니와 함께 도쿄에서 고치로 전학옴.<br><br>
+                                    성적도 좋고 운동도 잘하지만 친구들과 어울리지 못하고 제멋대로 행동한다.<br><br>
+                                    자신의 의견과 반하여 오게 된 고치에 대한 반발심, 도쿄에의 그리움으로, 주변과 어울리려 하지 않으며 따돌림을 받고 있다.<br><br>
+                                    그러나 본인은 그것에 전혀 신경을 쓰고 있지 않는다.<br> 친구는 고하마 유미 한명 뿐이다. 다쿠와 마쓰노가 연심을 품고 있다.                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box1">
+                        <div class="imgtxtbx">
+                            <div class="txtbx">
+                                <div class="img">
+                                    <img class="iimg" src="./img/sub4img/utaka.jpeg" alt="포스터" style="display: inline">
+                                </div>
+                                <h3>
+                                    마쓰노 유타카
+                                    <span>松野 豊</span>
+                                </h3>
+                                <p>
+                                    타쿠의 절친한 친구로, 타쿠와는 수학여행 취소 설명회에서 알게 되었다.<br><br>
+                                    성적도 우수한 편으로 반장을 맡고 있으나, 특히 눈에 띄지 않는 평범한 학생.<br><br>
+                                    리카코에게 첫눈에 반하고 타쿠에게는 그 감정을 잘 숨기지 못한다.<br>
+                                    반에 제대로 적응하지 못하는 리카코를 걱정하며 신경을 써줌.<br><br>
+                                    고교 졸업 후 교토의 대학으로 진학한다.
+                                </p>
+                            </div>
+                            <div class="imgbx fimg">
+                                <div class="mainposter"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box1">
+                        <div class="imgtxtbx">
+                            <div class="imgbx fifimg">
+                                <div class="mainposter"></div>
+                            </div>
+                            <div class="txtbx">
+                                <div class="img">
+                                    <img class="iimg" src="./img/sub4img/umi.jpeg" alt="포스터" style="display: inline">
+                                </div>
+                                <h3>
+                                    고하마 유미
+                                    <span>小浜 裕実</span>
+                                </h3>
+                                <p>
+                                    3학년이 돼서야 리카코와 친해진 친구<br>
+                                    어느 날 타쿠는 유미로부터 전화를 받고, 리카코가 고하마에게 콘서트를 같이 가자는 거짓말을 하고 도쿄행 비행기 티켓을 끊은 것을 알게 되었다.<br><br>
+                                    타쿠는 자신에게 돈을 빌린 이유를 알게 되었고 배신감을 느끼지만, 아빠를 만나고 싶어하는 리카코와 함께 도쿄에 가게 된다.
                                 </p>
                             </div>
                         </div>
