--- a/Pj_BIFF/sub4.html
+++ b/Pj_BIFF/sub4.html
@@ -251,7 +251,7 @@
                                     <span>小浜 裕実</span>
                                 </h3>
                                 <p>
-                                    3학년이 돼서야 리카코와 친해진 친구<br>
+                                    3학년이 돼서야 리카코와 친해진 친구<br><br>
                                     어느 날 타쿠는 유미로부터 전화를 받고, 리카코가 고하마에게 콘서트를 같이 가자는 거짓말을 하고 도쿄행 비행기 티켓을 끊은 것을 알게 되었다.<br><br>
                                     타쿠는 자신에게 돈을 빌린 이유를 알게 되었고 배신감을 느끼지만, 아빠를 만나고 싶어하는 리카코와 함께 도쿄에 가게 된다.
                                 </p>
