--- a/Pj_BIFF/sub4.html
+++ b/Pj_BIFF/sub4.html
@@ -12,9 +12,9 @@
 
     <script src="./JS/main.js"></script>
     <!-- 부드러운 스크롤 플러그인 : 제이쿼리아님! -->
-    <script src="./JS/jquery-3.6.0.min.js"></script>
+    <!-- <script src="./JS/jquery-3.6.0.min.js"></script>
     <script src="./JS/jquery-ui.min.js"></script>
-    <script src="./JS/sub_jquery-autoScroll-1.0.js"></script>
+    <script src="./JS/sub_jquery-autoScroll-1.0.js"></script> -->
 
     <script>
 
@@ -325,7 +325,9 @@
             </div>
         </footer>
 
-        <nav class="indic">
+
+
+        <!-- <nav class="indic">
             <ul>
                 <li class="on">
                     <a href="#pg1"><span>1</span></a>
@@ -339,7 +341,7 @@
 
             </ul>
 
-        </nav>
+        </nav> -->
 
 
 </body>
