--- a/Pj_BIFF/sub4.html
+++ b/Pj_BIFF/sub4.html
@@ -267,7 +267,7 @@
         <!-- /******************************************* cont3 *******************************************/ -->
             <section id="pg3" class="cont3">
                 <div class="inner">
-                    <h2 class="tit">ending</h2>
+                    <h2 class="tit">Ending</h2>
                     <div class="end">
                         <img src="./img/sub4img/ending.gif" alt="엔딩장면">
                     </div>
@@ -279,7 +279,7 @@
                         <img src="./img/sub4img/ending2.gif" alt="엔딩장면">
                     </div>
                     <div class="txtbx">
-                        "아, 역시 난 좋아했던 거야. 그렇게 느껴졌다." - 타쿠<br><br>
+                        <p>"아, 역시 난 좋아했던 거야. 그렇게 느껴졌다." - 타쿠</p> <br><br>
                         타쿠는 동창회에 참석해 리카코에 대해 들으며 자신이 리카코를 좋아했다는 감정을 깨달았다.<br>
                         게다가 리카코가 도쿄에서 만나고 싶어 하는 사람이 자신임을 알게 되면서 새삼스럽게 설레고 있었다.<br>
                         다시 도쿄로 돌아와 플랫폼에서 리카코를 발견하고 만났을 때, 자신의 감정을 확신하며 했던 말이다.
