--- a/Pj_BIFF/sub4.html
+++ b/Pj_BIFF/sub4.html
@@ -291,79 +291,9 @@
             </section>
         </main>
         <!-- /******************************************* 하단 *******************************************/ -->
-        <footer id="ft" class="ft">
-            <div class="footer_inner">
-                <div class="container">
-                    <div class="ft_social">
-                        <ul>
-                            <li>
-                                <a href="https://www.facebook.com/busanfilmfest" target="_blank" title="페이스북 이동"
-                                    class="facebook"></a>
-                            </li>
-                            <li>
-                                <a href="https://twitter.com/busanfilmfest" target="_blank" title="트위터 이동"
-                                    class="twiter"></a>
-                            </li>
-                            <li>
-                                <a href="http://instagram.com/busanfilmfest" target="_blank" title="인스타그램 이동"
-                                    class="instargram"></a>
-                            </li>
-                            <li>
-                                <a href="https://www.youtube.com/channel/UCJB3MxLQsak5tT-Yvod2alA" target="_blank"
-                                    title="유튜브 이동" class="youtube"></a>
-
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="fnb">
-                        <ul class="fnb list-inline">
-                            <li><a href="#">개인정보처리방침</a></li>
-                            <li><a href="#">저작권정책</a></li>
-                            <li><a href="#">1:1문의</a></li>
-                            <li><a href="#">역대영화제</a></li>
-                        </ul>
-                    </div>
-                    <div class="row foot_line">
-                        <div class="col" style="text-align: center;">
-                            <address>
-                                <p>
-                                    <strong>부산사무국</strong>
-                                    (48058) 부산광영시 해운대구 수영강변대로 120 영화의전당 비프힐 3층
-                                    <br>
-                                    <strong>서울사무소</strong>
-                                    (03131) 서울특별시 종로구 율곡로 84 가든타워 1601호
-                                </p>
-                                <p>
-                                    <strong>대표전화</strong>
-                                    1688-3010
-                                </p>
-                            </address>
-                        </div>
-                    </div>
-                    <p class="copyright ">ⓒ Busan International Film Festival</p>
-                </div>
-            </div>
+        <footer id="footer">
+            <a href="#">OCEAN WAVES</a>
         </footer>
-
-
-
-        <!-- <nav class="indic">
-            <ul>
-                <li class="on">
-                    <a href="#pg1"><span>1</span></a>
-                </li>
-                <li>
-                    <a href="#pg2"><span>2</span></a>
-                </li>
-                <li>
-                    <a href="#pg3"><span>3</span></a>
-                </li>
-
-            </ul>
-
-        </nav> -->
-
-
 </body>
 
 </html>
