--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -102,7 +102,7 @@
     
     <!-- /******************************************* cont1 *******************************************/ -->
     <div id="cont">
-        <section id="pg1" class="cont1">
+        <section id="pg" class="cont1">
             <video class="Mvideo" src="./img/ocean_waves.mp4" autoplay muted loop></video>
             <audio autoplay controls loop onloadstart="this.volume=0.3">
             <source src="./img/ocean_waves.mp3" type="audio/mpeg">
@@ -138,7 +138,7 @@
 
         <!-- /******************************************* cont2 *******************************************/ -->
         <!-- <main class="cont ibx"> -->
-        <section id="pg2" class="cont2">
+        <section id="pg1" class="cont2">
             <div class="characters">
                 <h2>바다가 들린다 | Ocean Waves</h2>
                 <div class="cbwrap">
@@ -168,7 +168,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="box1">
+                    <div id="pg2" class="box1">
                         <div class="imgtxtbx">
                             <h2>캐릭터 소개</h2>
                             <div class="txtbx">
@@ -287,7 +287,7 @@
         </main>
         <!-- /******************************************* 하단 *******************************************/ -->
         <footer id="footer">
-            <a href="https://www.ghibli.jp/"><abbr title="지브리 홈페이지"><img class="ghibli" src="./img/sub4img/gibrri.png" alt="지브리로고"></abbr></a>
+            <a href="https://www.ghibli.jp/"><abbr title="지브리 공식홈페이지"><img class="ghibli" src="./img/sub4img/gibrri.png" alt="지브리로고"></abbr></a>
             <a href="#">OCEAN WAVES</a>
         </footer>
 </body>
