--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -28,7 +28,7 @@
             <button class="cbtn" onclick="sMenu()">×</button>
             <ul>
                 <li>
-                    <a href="#">BIFF</a>
+                    <a href="#">Studio Ghibli</a>
                     <ol class="smenu">
                         <li>
                             <a href="#">인사말</a>
@@ -60,7 +60,7 @@
                     </ol>
                 </li>
                 <li>
-                    <a href="#">게시판</a>
+                    <a href="#">갤러리</a>
                     <ol class="smenu">
                         <li>
                             <a href="#">Q&amp;A</a>
@@ -70,7 +70,7 @@
                         </li>
                     </ol>
                 </li>
-                <li><a href="#"><img src="./img/onair.png" alt="온에어"></a></li>
+                <li><a href="#"><img class="ghilogo" src="./img/sub4img/gibrri.png" alt="지브리"></a></li>
             </ul>
         </nav>
 
