--- a/001.HTML/006.CGV_PJ/003.site/index.html
+++ b/001.HTML/006.CGV_PJ/003.site/index.html
@@ -143,63 +143,63 @@
                     <!-- onclick 속성
                     클릭이벤트속성 : 클릭이벤트 발생시
                 JS코드를 실행함 -> 여기서는 함수호출 -->
-                    <a href="#" onclick="goMv('dWEQjU3GCE0')">
-                        <img src="images/m1-1.jpg" alt="연애 빠진 로맨스">
+                    <a href="#" onclick="goMv('XY1bIZL7brc')">
+                        <img src="images/fanta.jpeg" alt="한여름의 판타지아">
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>연애 빠진 로맨스</li>
-                            <li>전종서,손석구</li>
-                            <li>멜로/로맨스, 코미디</li>
-                        </ol>
-                    </a></li>
-                <li>
-                    <a href="#" onclick="goMv('RoMUUNBjO_8')">
-                        <img src="images/m2-1.jpg" alt="킹메이커">
-                        <!-- 영화정보 -->
-                        <ol class="movtxt">
-                            <li>킹메이커</li>
-                            <li>설경구,이선균</li>
+                            <li>한여름의 판타지아</li>
+                            <li>김새벽, 이와세 료</li>
                             <li>드라마</li>
                         </ol>
                     </a></li>
                 <li>
-                    <a href="#" onclick="goMv('bR27YmkAK24')">
-                        <img src="images/m3-1.jpg" alt="비상선언">
+                    <a href="#" onclick="goMv('6KXysgJCAhw')">
+                        <img src="images/lovedrugs.jpeg" alt="러브 & 드럭스">
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>비상선언</li>
-                            <li>송강호,이병헌</li>
+                            <li>러브 & 드럭스</li>
+                            <li>제이크 질렌할,앤 해서웨이</li>
+                            <li>코미디, 멜로/로맨스</li>
+                        </ol>
+                    </a></li>
+                <li>
+                    <a href="#" onclick="goMv('y2AAVYBwgyg')">
+                        <img src="images/wonder.jpeg" alt="원더">
+                        <!-- 영화정보 -->
+                        <ol class="movtxt">
+                            <li>원더</li>
+                            <li>줄리아 로버츠</li>
                             <li>드라마</li>
                         </ol>
                     </a></li>
                 <li>
-                    <a href="#" onclick="goMv('SvKCs-80uk4')">
-                        <img src="images/m4-1.jpg" alt="킹스맨: 퍼스트 에이전트">
+                    <a href="#" onclick="goMv('2D4nzQduvQ8')">
+                        <img src="images/rud.jpeg" alt="러덜리스">
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>킹스맨: 퍼스트 에이전트</li>
-                            <li>랄프 파인즈, 해리스 딕킨슨</li>
-                            <li>액션</li>
+                            <li>러덜리스</li>
+                            <li>빌리 크루덥</li>
+                            <li>드라마, 코미디</li>
                         </ol>
                     </a></li>
                 <li>
-                    <a href="#" onclick="goMv('KBT_YZdoF6g')">
-                        <img src="images/m5-1.jpg" alt="엔칸토:마법의 세계">
+                    <a href="#" onclick="goMv('kU1mHiXbzyM')">
+                        <img src="images/mow.jpeg" alt="나우 이즈 굿">
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>엔칸토: 마법의 세계</li>
-                            <li>스테파니 비트리즈</li>
-                            <li>애니메이션</li>
+                            <li>나우 이즈 굿</li>
+                            <li>다코타 패닝</li>
+                            <li>드라마</li>
                         </ol>
                     </a></li>
                 <li>
-                    <a href="#" onclick="goMv('yFZh-Wqi7RI')">
-                        <img src="images/m6-1.jpg" alt="스파이더맨: 노 웨이 홈">
+                    <a href="#" onclick="goMv('2DWIexD6qgA')">
+                        <img src="images/op.jpeg" alt="오펀: 천사의 비밀">
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>스파이더맨: 노 웨이 홈</li>
-                            <li>톰 홀랜드, 젠데이아 콜먼</li>
-                            <li>액션,판타지</li>
+                            <li>오펀: 천사의 비밀</li>
+                            <li>베라 파미가</li>
+                            <li>스릴러, 공포</li>
                         </ol>
                     </a></li>
             </ul>
