--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -63,10 +63,10 @@
                     <a href="#">갤러리</a>
                     <ol class="smenu">
                         <li>
-                            <a href="#">Q&amp;A</a>
+                            <a href="#">지브리 미술관</a>
                         </li>
                         <li>
-                            <a href="#">방명록</a>
+                            <a href="#">지브리 전시회</a>
                         </li>
                     </ol>
                 </li>
@@ -77,7 +77,7 @@
         <header class="top ibx">
             <div class="logo">
                 <a href="./index.html">
-                    <img class="log" src="./img/sealogo.jpeg" alt="BIFF로고">
+                    <img class="log" src="./img/sealogo.jpeg" alt="바다가들린다 로고">
                 </a>
             </div>
 
@@ -105,7 +105,7 @@
         <section id="pg" class="cont1">
             <video class="Mvideo" src="./img/ocean_waves.mp4" autoplay muted loop></video>
             <audio autoplay controls loop onloadstart="this.volume=0.3">
-            <source src="./img/ocean_waves.mp3" type="audio/mpeg">
+            <source src="./img/ocean_waves.mp3"autoplay type="audio/mpeg">
                Your browser does not support the audio element.
                이 브라우저에서는 오디오가 지원되지 않습니다.
             </audio>
