--- a/001.HTML/011.BS_STUDIO_Pj/002.site/intro.html
+++ b/001.HTML/011.BS_STUDIO_Pj/002.site/intro.html
@@ -22,7 +22,7 @@
             <div class="bar"></div>
             <div class="bar"></div>
             <audio autoplay controls loop onloadstart="this.volume=0.7">
-                <source src="../003.source/playlist.mp3"autoplay loop type="audio/mpeg">
+                <source src="../003.source/playlist2.mp3"autoplay loop type="audio/mpeg">
                 Your browser does not support the audio element.
                 이 브라우저에서는 오디오가 지원되지 않습니다.
             </audio>
