--- a/001.HTML/011.BS_STUDIO_Pj/002.site/intro.html
+++ b/001.HTML/011.BS_STUDIO_Pj/002.site/intro.html
@@ -13,20 +13,20 @@
     <a href="./index.html">
     <video id="video" src="../003.source/wave2.mp4" autoplay loop onloadstart="this.volume=0.5" playsinline="./img/intro.png"></video>
     </a>
-    <!-- <div class="sdc">
+    <audio autoplay controls loop onloadstart="this.volume=0.7">
+        <source src="../003.source/playlist2.mp3"autoplay loop type="audio/mpeg">
+        Your browser does not support the audio element.
+        이 브라우저에서는 오디오가 지원되지 않습니다.
+    </audio>
+    <div class="sdc null-transform-hack">
         <div class="bars active fade-leave-active fade-leave-to">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
-            <div class="bar"></div> -->
-            <audio autoplay controls loop onloadstart="this.volume=0.7">
-                <source src="../003.source/playlist2.mp3"autoplay loop type="audio/mpeg">
-                Your browser does not support the audio element.
-                이 브라우저에서는 오디오가 지원되지 않습니다.
-            </audio>
-        <!-- </div>
-    </div> -->
+            <div class="bar"></div>
+        </div>
+    </div>
 
 </body>
