--- a/001.HTML/011.BS_STUDIO_Pj/002.site/intro.html
+++ b/001.HTML/011.BS_STUDIO_Pj/002.site/intro.html
@@ -7,17 +7,17 @@
 <title>BS STUDIO intro page</title>
 <link rel="stylesheet" href="./css/intro.css">
 
-<script>
+<!-- <script>
     function stopbar(bar) {
 
     };
-</script>
+</script> -->
 
 </head>
 
 <body>
     <!-- <a href="./index.html"> -->
-    <video id="video" src="../003.source/wave2.mp4" autoplay loop onloadstart="this.volume=0.4" playsinline="./img/intro.png"></video>
+    <video id="video" src="../003.source/wave.mp4" autoplay muted loop  onloadstart="this.volume=0.4" playsinline="./img/intro.png"></video>
     <!-- </a> -->
     <audio autoplay controls loop onloadstart="this.volume=0.5">
         <source src="../003.source/bill.mp3"autoplay loop type="audio/mpeg">
