--- a/001.HTML/011.BS_STUDIO_Pj/002.site/intro.html
+++ b/001.HTML/011.BS_STUDIO_Pj/002.site/intro.html
@@ -13,13 +13,19 @@
     };
 </script> -->
 
+<script>
+    function change() {
+        var bar = document.getElementBy("bar");
+    }
+</script>
+
 </head>
 
 <body>
     <!-- <a href="./index.html"> -->
-    <video id="video" src="../003.source/wave.mp4" autoplay muted loop  onloadstart="this.volume=0.4" playsinline="./img/intro.png"></video>
+    <video id="video" src="../003.source/wave.mp4" autoplay loop onloadstart="this.volume=0.4" playsinline="./img/intro.png"></video>
     <!-- </a> -->
-    <audio autoplay controls loop onloadstart="this.volume=0.5">
+    <audio autoplay controls loop muted onloadstart="this.volume=0.5">
         <source src="../003.source/bill.mp3"autoplay loop type="audio/mpeg">
         Your browser does not support the audio element.
         이 브라우저에서는 오디오가 지원되지 않습니다.
